--- a/EvolveMono.csproj
+++ b/EvolveMono.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="game\gui\tileinfo\ResourceInfo.cs" />
+    <Compile Include="game\gui\tileinfo\TerrainInfo.cs" />
+    <Compile Include="game\gui\tileinfo\TileInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="game\*.cs" />
     <Compile Include="game\buildings\*.cs" />
